--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.28.0
-plotly==5.17.0
-pandas==2.1.0
-numpy==1.24.3
-python-dotenv==1.0.0
-google-generativeai==0.3.0
+streamlit
+plotly
+pandas
+numpy
+python-dotenv
+google-generativeai
